src/main/resources/deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: spring-app2
  labels:
    name: spring-app2
spec:
  ports:
    - nodePort: 30167 
      port: 9001     
      targetPort: 9001 
      protocol: TCP
  selector:           
    app: spring-app1
  type: NodePort       

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: spring-app2
spec:                
  selector:         
    matchLabels:
      app: spring-app2
  replicas: 3        
  template:
    metadata:
      labels:        
        app: spring-app2
    spec:
      containers:
        - name: spring-app2
          image: mayankt1/backend-app:latest
          ports:
            - containerPort: 9001                
          env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: db-conf  # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: db-conf 
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials
                key: password
